--- a/MoonBookWeb/Views/Books/BookPage.cshtml
+++ b/MoonBookWeb/Views/Books/BookPage.cshtml
@@ -31,6 +31,8 @@
             <div class="SubBook" id="SubBook">
                 <img title="Subscribers" src="/img_post/local_library_FILL0_wght500_GRAD0_opsz48.png" />
                 <p title="Subscribers">0</p>
+                <img style="margin-left: 10px; margin-bottom: 1px;" title="Rating" src="/icons/grade_FILL0_wght400_GRAD0_opsz48.png" />
+                <p id="UserRating" title="Rating">0</p>
             </div>
         </div>
     </div>
