--- a/MoonBookWeb/Views/Shared/_Layout.cshtml
+++ b/MoonBookWeb/Views/Shared/_Layout.cshtml
@@ -38,10 +38,12 @@
                     }
                     @if(library == "Ok")
                     {
+                        <input id="Rating" value="Rating" type="checkbox">
+                        <label for="Rating">Rating</label>
                         <input id="AlpBook" value="Alphabet" type="checkbox">
-                        <label for="AlpBook" style="margin-right: 1%">Alphabet</label>
+                        <label for="AlpBook">Alphabet</label>
                         <input id="DateBook" value="Date" type="checkbox">
-                        <label for="DateBook" style="margin-right: 1%" >Date</label>
+                        <label for="DateBook">Date</label>
                         <select id="Genry">
                             <option selected="selected">Choose Genry</option>
                             <option value="Prose">Prose</option>
