--- a/MoonBookWeb/Views/Login/Registration.cshtml
+++ b/MoonBookWeb/Views/Login/Registration.cshtml
@@ -3,7 +3,7 @@
 }
 <link rel="stylesheet" href="~/css/registration.css" asp-append-version="true" />
 <div class="Regestration">
-    <h1 class="Title">
+    <h1 class="TitleRegistration">
         Registration User
     </h1>
     <div class="Form">
@@ -14,20 +14,20 @@
             </label>
             @if (!String.IsNullOrEmpty(err?[8]))
                 @err[8]
-       <p>Name:             <p/> <input type="text" name="Name" />
-           @if (!String.IsNullOrEmpty(err?[1])) @err[1]
-       <p>Surname:          <p/> <input type="text" name="Surname" /> 
-           @if (!String.IsNullOrEmpty(err?[2])) @err[2]
-       <p>Date of Bith:     <p/> <input type="date" name="DateOfBith"/>
-           @if (!String.IsNullOrEmpty(err?[3])) @err[3]
-       <p>Login:            <p/> <input type="text" name="Login" /> 
-           @if (!String.IsNullOrEmpty(err?[4])) @err[4]
-       <p>Email:            <p/> <input type="email" name="Email" /> 
-           @if (!String.IsNullOrEmpty(err?[5])) @err[5]
-       <p>Password:         <p/> <input type="password" name="Password" /> 
-           @if (!String.IsNullOrEmpty(err?[6])) @err[6]
-        <p>Confirm password: <p /> <input type="password" name="ConfirmPass" /> 
-           @if (!String.IsNullOrEmpty(err?[7])) @err[7]
+       <p>Name:             </p> <input type="text" name="Name" /> <br/>
+          <p class="Error">@if (!String.IsNullOrEmpty(err?[1])) @err[1]</p> 
+       <p>Surname:          </p> <input type="text" name="Surname" /> <br/>
+         <p class="Error">  @if (!String.IsNullOrEmpty(err?[2])) @err[2]  </p>
+       <p>Date of Bith:     </p> <input type="date" name="DateOfBith"/> <br/>
+         <p class="Error">  @if (!String.IsNullOrEmpty(err?[3])) @err[3] </p>
+       <p>Login:            </p> <input type="text" name="Login" /> <br/>
+         <p class="Error">  @if (!String.IsNullOrEmpty(err?[4])) @err[4] </p>
+       <p>Email:            </p> <input type="email" name="Email" /> <br/>
+          <p class="Error"> @if (!String.IsNullOrEmpty(err?[5])) @err[5] </p>
+       <p>Password:         </p> <input type="password" name="Password" /> <br/>
+        <p class="Error">   @if (!String.IsNullOrEmpty(err?[6])) @err[6] </p>
+       <p>Confirm password: </p> <input type="password" name="ConfirmPass" /> <br/>
+          <p class="Error"> @if (!String.IsNullOrEmpty(err?[7])) @err[7] </p>
 
        <br />
        <button>Registration </button>
