--- a/MoonBookWeb/Views/Shared/_Layout.cshtml
+++ b/MoonBookWeb/Views/Shared/_Layout.cshtml
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="~/MoonBookWeb.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header style="background-color: #313574;">
+    <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MoonBook</a>
+                <a class="Title" asp-area="" asp-controller="Home" asp-action="Index">MoonBook</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
