--- a/MoonBookWeb/wwwroot/css/userlibrary.css
+++ b/MoonBookWeb/wwwroot/css/userlibrary.css
@@ -1,8 +1,4 @@
 ﻿/*=================== User Library===============*/
-#UserBook {
-    max-height: 215px;
-    overflow: overlay;
-}
 #TextColor {
     margin-right: 1%;
 }
@@ -23,10 +19,12 @@
 
 #TitleBook {
     margin: 1%;
-    background-color: #08206c;
+    background-color: #30323c;
     width: 250px;
     height: 25px;
     border-radius: 7px;
+    margin-bottom: 1.5%;
+    margin-top: 3%;
 }
 
 #UserLibrary book {
@@ -36,6 +34,8 @@
     border: 2px double black;
     padding: 6px;
     border-radius: 10px;
+    max-height: 215px;
+    overflow: overlay;
 }
     #UserLibrary book::-webkit-scrollbar {
         width: 6px;
@@ -130,7 +130,7 @@
     flex-direction: column;
     align-items: flex-end;
     padding: 10px;
-    background: #313574;
+    background-color: #30323c;
     visibility: hidden;
     margin: 0;
 }
